# VisionDLM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/agents/: vision_vision_agent.agent.md
python/script/: best_patch_model.pth  best_patch_model_v3.pth  model_workflow.ipynb  patch_checker_int8.xml  test_model_4paths_classification.ipynb  test_model_multipath_classification.ipynb  test_model_unet_classification.ipynb  train_resnet_classification.py
python/script/models/: pandora_deep_v2.onnx
sources/algorithm/: dataset.h  model_handler.h
sources/models/: Resnet50_Vision.h  UnifiedVisionNetImpl.h  models.h
